[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-snippet-toolkit-utils-001"
version = "0.1.0"
description = "High-performance code snippets and utilities toolkit"
authors = [{name = "soke.0xai", email = "soke.0xai@outlook.jp"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/soke-0xai/pl-snippet-toolkit-utils-001"
Repository = "https://github.com/soke-0xai/pl-snippet-toolkit-utils-001"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
